--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"dotenv": "^14.2.0",
 		"mongodb": "^4.3.0",
-		"node-fetch": "^3.1.1"
+		"node-fetch": "^3.1.1",
+		"tldts-experimental": "^5.7.59"
 	}
 }
