--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "James McKee",
 	"license": "ISC",
 	"dependencies": {
+		"commoncrawl": "^1.0.1",
 		"dotenv": "^14.2.0",
 		"mongodb": "^4.3.0",
 		"node-fetch": "^3.1.1",
