--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"dotenv": "^14.2.0",
+		"es-main": "^1.0.2",
 		"mongodb": "^4.3.0",
 		"node-fetch": "^3.1.1",
 		"tldts-experimental": "^5.7.59"
