--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"dotenv": "^14.2.0",
 		"es-main": "^1.0.2",
+		"graphql": "^16.3.0",
+		"graphql-request": "^4.0.0",
 		"mongodb": "^4.3.0",
 		"node-fetch": "^3.1.1",
 		"tldts-experimental": "^5.7.59"
