--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"main": "app.js",
 	"scripts": {
+		"start": "node ./create/createAllAPI.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "James McKee",
